[tool.poetry]
name = "kifurushi"
version = "0.1.0"
description = "A simple library to forge network packets"
authors = ["lewoudar <lewoudar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scapy = "^2.4.4"
bandit = "^1.7.0"
flake8 = "^3.8.4"
pytest-mock = "^3.4.0"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
mkdocs-material = "^6.2.7"
mkdocstrings = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
