[tool.poetry]
name = "kifurushi"
version = "0.4.0"
description = "A simple library to forge network packets"
authors = ["lewoudar <lewoudar@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["kifurushi", "networking", "protocol", "sans-io", "packet"]

homepage = "https://kifurushi.readthedocs.io/en/stable"
repository = "https://github.com/lewoudar/kifurushi"
documentation = "https://kifurushi.readthedocs.io/en/stable"

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: PyPy"
]

packages = [
    { include = "kifurushi" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lewoudar/kifurushi/issues"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
scapy = "^2.4.4"
bandit = "^1.7.0"
flake8 = "^3.8.4"
pytest-mock = "^3.4.0"
pytest-cov = "^2.10.1"
mkdocs = "^1.1.2"
mkautodoc = "^0.1.0"
mkdocs-material = "^7.0.3"
codecov = "^2.1.11"
nox = "^2020.12.31"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=kifurushi --cov-report html --cov-report xml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
